@@ -28,6 +28,8 @@ indexpage:
           url: ehc/index.html
         - title: "NetApp Hybrid Multicloud with Red Hat"
           url: rhhc/index.html
+        - title: "VMware Sovereign Cloud"
+          url: vmw-sc/index.html
         - title: "SAP and SAP HANA"
           url: https://docs.netapp.com/us-en/netapp-solutions-sap/index.html
         - title: "Virtualization"
