@@ -25,6 +25,7 @@ sidebar:
     - section: databases
     - section: data-analytics
     - section: ehc
+    - section: vmw-sc
     - section: rhhc
     - section: virtualization
     - section: automation
