@@ -1,0 +1,31 @@
+indexpage:
+#  lead: VMware Sovereign Cloud
+  tiles:
+    - title: "VMware Resources for Sovereign Cloud"
+      links:
+        - title: "VMware Sovereign Cloud Overview"
+          url: https://www.vmware.com/content/dam/digitalmarketing/vmware/en/pdf/docs/vmw-sovereign-cloud-solution-brief-customer.pdf
+        - title: "What is VMware Sovereign Cloud?"
+          url: https://www.vmware.com/topics/glossary/content/sovereign-cloud.html
+        - title: "Introducing the New VMware Sovereign Cloud Initiative"
+          url: https://blogs.vmware.com/cloud/2021/10/06/vmware-sovereign-cloud/
+        - title: "VMware Sovereign Cloud Technical White Paper"
+          url: https://www.vmware.com/content/dam/learn/en/amer/fy22/pdf/1173457_Sovereign_Cloud_Technical_Whitepaper_V3.pdf
+#
+    - title: "VMware Sovereign Cloud with NetApp: Use Cases"
+      links:
+        - title: "Overview"
+          url: /sc-overview.html
+        - title: "StorageGRID as an Object Store Extension"
+          url: /sc-use-cases.html#StorageGRID
+#        - title: "Cloud Data Sense for Data Classification"
+#          url: 
+#        - title: "ONTAP as an Primary Data Store for Workload Domains"
+#          url: 
+#        - title: "ONTAP for File Services"
+#          url:
+#        - title: "ONTAP for Data Protection as a Service"
+#          url:
+#        - title: "Disaster Recovery as a Service"
+#          url:
+#
