@@ -1,0 +1,14 @@
+---
+layout: landing-page
+sidebar: sidebar
+permalink: vmw-sc/index.html
+lead: Sovereign Cloud is a type of cloud computing that prioritizes data residency and sovereignty for organizations. This means that the data is stored and processed in a geographic location subject to the privacy laws of the nation where it is collected, ensuring compliance with privacy laws and data protection regulations. These national or regional regulations and laws govern everything from where data resides geographically to cross-border data flow.
+summary: Sovereign Cloud is a type of cloud computing that prioritizes data residency and sovereignty for organizations. This means that the data is stored and processed in a geographic location subject to the privacy laws of the nation where it is collected, ensuring compliance with privacy laws and data protection regulations. These national or regional regulations and laws govern everything from where data resides geographically to cross-border data flow.
+---
+
+= VMware Sovereign Cloud
+:hardbreaks:
+:nofooter:
+:icons: font
+:linkattrs:
+:imagesdir: ./media/
