@@ -1,0 +1,59 @@
+---
+sidebar: sidebar
+permalink: vmw-sc/sc-use-cases.html
+keywords: NetApp Solutions, vmware, sovereign cloud, netapp, use case
+summary:
+---
+
+= Netpp with VMware Sovereign Cloud: Use Cases
+:hardbreaks:
+:nofooter:
+:icons: font
+:linkattrs:
+:imagesdir: ./../media/
+
+[.lead]
+NetApp provides support for VMware Sovereign Cloud concepts through the integration of several NetApp technologies.
+
+Use the following link(s) to discover more about the NetApp technology integrations with VMware Sovereign Cloud:
+
+* link:#storageGRID[NetApp StorageGRID as an Object Store Extension]
+// * link:#cloud-data-sense[Cloud Data Sense for Data Classification]
+// * link:#primary-datastore[ONTAP as an Primary Data Store for Workload Domains]
+// * link:#file-services[ONTAP for File Services]
+// * link:#data-protection[ONTAP for Data Protection as a Service]
+// * link:#draas[Disaster Recovery as a Service]
+
+[[storageGRID]]
+== NetApp StorageGRID as an Object Store Extension
+ 
+NetApp has collaborated with VMware to integrate NetApp StorageGRID into VMware Cloud Director in support of the VMware Sovereign Cloud. This plug-in to VMware Cloud Director enables service providers to use StorageGRID as their object storage offering (regardless of use case) and allows StorageGRID management through the same VMware multi-tenant solution (VMware Cloud Director) used by service providers to manage other parts of their offering catalog. 
+
+Partners that deliver VMware Sovereign Clouds can choose NetApp StorageGRID to help them managed and maintain cloud environments with unstructured data. Its universal compatibility in its native support for industry-standard APIs, like Amazon S3 API, helps ensure smooth interoperability across diverse cloud environments, and unique innovations such as automated lifecycle management helps ensure more cost-effective safeguarding, storage, and long-term preservation of customers’ unstructured data.
+ 
+NetApp’s Sovereign Cloud integration with Cloud Director providers customers with:
+
+* Assurance that sensitive data, including metadata, remains under sovereign control while preventing access by foreign authorities that could violate data privacy laws. 
+* Increased security and compliance that protects applications and data from rapidly evolving attack vectors while maintaining continuous compliance with a trusted local. infrastructure, built-in frameworks, and local experts.
+* Future-proofed infrastructure to react quickly to changing data privacy regulations, security threats, and geopolitics.
+* The ability to unlock the value of data with secure data sharing and analysis to drive innovation without violating privacy laws. Data integrity is protected to ensure accurate insights.
+
+For more information on the StorageGRID integration, check out the following:
+
+* link:https://news.vmware.com/releases/vmware-explore-2023-barcelona-sovereign-cloud[VMware Announcement]
+* link:https://www.businesswire.com/news/home/20231107247067/en/NetApp-Announces-VMware-Sovereign-Cloud-Integration-and-Simplified-Data-Management-for-Modern-Virtualized-Applications[NetApp Announcement through businesswire]
+
+// [[cloud-data-sense]]
+// == Cloud Data Sense for Data Classification
+
+// [[primary-datastore]]
+// == ONTAP as an Primary Data Store for Workload Domains
+
+// [[file-services]]
+// == ONTAP for File Services
+
+// [[data-protection]]
+// == ONTAP for Data Protection as a Service
+
+// [[draas]]
+// == Disaster Recovery as a Service
