@@ -3,6 +3,10 @@
 |===
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
+// tag::vmw-sc[]
+| 11/07/2023 | Sovereign Cloud | New content: StorageGRID as an Object Store Extension
+| 11/06/2023 | Sovereign Cloud | New content for VMware Sovereign Cloud with NetApp
+// end::vmw-sc[]
 // tag::aiml[]
 | 10/11/2023 | AI | New solution: Hybrid Multicloud MLOps with Domino Data Lab and NetApp
 // end::aiml[]
